<resources>
    <string name="app_name">BaseLibrary</string>

    <string name="loading">正在加载中\u2026</string>
    <string name="tip_network_error">没有网络连接，请检查</string>
    <string name="search">搜索</string>
    <string name="baselib_delete">删除</string>
    <string name="baselib_confirm">确定</string>

    <string name="nothing"></string>

    <!--编辑框小数点位数-->
    <string name="five">5</string>
    <string name="two">2</string>

    <!--修正三星手机可输入中文的问题-->
    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ,.</string>



    <!--分享-->
    <string name="baselib_share">分享</string>
    <string name="baselib_share_friend">微信好友</string>
    <string name="baselib_share_circle">微信朋友圈</string>
    <string name="baselib_share_qq">QQ好友</string>
    <string name="baselib_share_qq_zone">QQ空间</string>
    <string name="baselib_cancel">取消</string>

    <!--KeyboardUtils-->
    <string name="baselib_copy_success">复制成功</string>
    <string name="baselib_copy_fail">复制失败，请重试</string>
    <string name="baselib_copy_empty">没有可复制的内容</string>
    <string name="baselib_not_data">没有数据</string>


    <!--搜索框专场动画-->
    <string name="transition_name">searchView</string>
    <string name="transition_title_name">titleName</string>
    <string name="transition_video_player">videoPlayer</string>
    <string name="transition_avatar">userAvatar</string>
    <string name="transition_nickname">userName</string>

    <string name="format_money">¥%1$s</string>
    <string name="format_string">%1$s</string>


    <string name="baselib_ten_thousand">万</string>
    <string name="baselib_one_hundred_million">亿</string>

    <string name="the_certificate_expires_please_relogin">凭证过期，请重新登陆</string>
    <string name="your_account_is_logged_in_elsewhere_please_log_in_again">您的账号在其他地方登录，请重新登录</string>
</resources>
